Finalização da ver1.0

--- a/AvivatectParty - Client/src/app/core/pages/party/party.component.html
+++ b/AvivatectParty - Client/src/app/core/pages/party/party.component.html
@@ -1,3 +1,5 @@
-<p>
-  party works!
-</p>
+<div class="container text-center p-5">
+  <h1>FESTAAAAA !!!</h1>
+  <h3>Ainda não tem, mas será uma festa se eu for contratado</h3>  
+  <p>Muitas partes do código precisa ser refatorada e implementado diversar outras funcionalidades mas, devido ao pequeno prazo segue a versão 1.0</p>
+</div>
