--- a/AvivatectParty - Client/src/app/participante/components/editar-participante/editar-participante.component.html
+++ b/AvivatectParty - Client/src/app/participante/components/editar-participante/editar-participante.component.html
@@ -4,7 +4,7 @@
   <hr />
 
 
-  <form novalidate  #participanteForm="ngForm" (ngSubmit)="adicionarParticipante(participanteForm)">
+  <form novalidate  #participanteForm="ngForm" (ngSubmit)="editarParticipante(participanteForm)">
 
     <div class="form-horizontal">
 
